simple-nginx-in-loadbalancer/nginx-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: dev
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: web
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: api.sandbox.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  # name: http
                  number: 80
